# calee-regression

./: .gitignore  README.md  pyproject.toml
calee_regression/: __init__.py  __main__.py  apk_inspect.py  appium_driver.py  appium_lifecycle.py  appium_recovery.py  atomic_publish.py  bootstrap_provenance.py  build_identity.py  build_provenance.py  cli.py  config.py  consolidated_report.py  coverage_manifest.py  credentials.py  distributed_build_acceptance.py  distributed_build_provenance.py  evidence_acquisition.py  evidence_bundle.py  fixture_bridge.py  fixture_ownership.py  focused_context.py  focused_contract.py  focused_human_summary.py  focused_report_validation.py  focused_resume.py  focused_supervision.py  focused_workflow.py  framework_completeness.py  github_artifact.py  handoff_bridge.py  host_capabilities.py  ics_contract.py  identity_format.py  installed_artifact.py  machine_adapter.py  machine_config.py  main_ci_artifact.py  main_ci_evidence.py  manual_checks.py  (+32 more)
config/: machine.local.example.yaml  manual-checks.example.json  release-platforms.example.yaml  tester.local.example.yaml
coverage/: coverage-manifest.yaml  framework-completeness.json  framework-completeness.md
docs/: BRANCH_PROTECTION_STATUS.md  CALEE_LAUNCH_MODEL.md  CALENDAR_APPEARANCE_REGRESSION.md  CALENDAR_BIG_CHANGE_COVERAGE.md  CI_VALIDATION_TIERS.md  CLOUD_OFFLINE_WORKFLOW.md  COMPLETENESS_MODEL.md  CONFIGURATION_AND_QUALIFICATION.md  DEVICE_EXECUTION_STATUS.md  DISTRIBUTED_FIXTURE_LEASE_DECISION.md  FOCUSED_VERIFICATION.md  NON_TECH_TESTER_GUIDE.md  POST_MERGE_MAIN_CI.md  SETUP_MAC.md  (+10 more)
(+203 files in other folders)
